--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/RMacris/API_academia#readme",
   "dependencies": {
     "express": "^4.17.3",
+    "moment": "^2.29.3",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
