--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/RMacris/API_academia#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "moment": "^2.29.3",
     "sqlite3": "^5.0.2"
