--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
+    "start" : "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/RMacris/API_academia#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "moment": "^2.29.3",
     "sqlite3": "^5.0.2"
